-  chroot to /var/lib/whosond
Changed files:
    whoson.conf -> 1.2

--- a/whoson.conf
+++ b/whoson.conf
@@ -76,7 +76,7 @@ server	udp port=9876
 # inserted entries will live in the database if not deleted explicitely.
 
 server	global ttl=600			# 10 minutes
-	chroot=/var/tmp			# chdir and chroot here
+	chroot=/var/lib/whosond		# chdir and chroot here
 	group=nobody			# change group id and
 	user=nobody			# user id after bind()ing
 	cachesize=100000		# max. number of entries to keep
